@@ -1,19 +1,19 @@
 package com.baeldung.filewriter;
 
-import java.io.FileWriter;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Test;
+
+import java.io.FileWriter;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 public class FileWriterExampleUnitTest {
 
     @After
     public void tearDown() throws IOException {
-        Files.delete(Path.of("src/test/resources/FileWriterTest.txt"));
+        Files.delete(Paths.get("src/test/resources/FileWriterTest.txt"));
     }
 
     @Test
@@ -21,7 +21,7 @@ public class FileWriterExampleUnitTest {
         try (FileWriter fileWriter = new FileWriter("src/test/resources/FileWriterTest.txt")) {
             fileWriter.write("Hello Folks!");
         }
-        Assert.assertEquals("Hello Folks!", new String(Files.readAllBytes(Path.of("src/test/resources/FileWriterTest.txt"))));
+        Assert.assertEquals("Hello Folks!", new String(Files.readAllBytes(Paths.get("src/test/resources/FileWriterTest.txt"))));
     }
 
     @Test
@@ -34,7 +34,7 @@ public class FileWriterExampleUnitTest {
             fileWriter.write("Hello Folks Again!");
         }
 
-        Assert.assertEquals("Hello Folks!" + "Hello Folks Again!", new String(Files.readAllBytes(Path.of("src/test/resources/FileWriterTest.txt"))));
+        Assert.assertEquals("Hello Folks!" + "Hello Folks Again!", new String(Files.readAllBytes(Paths.get("src/test/resources/FileWriterTest.txt"))));
     }
 
     @Test
@@ -42,6 +42,6 @@ public class FileWriterExampleUnitTest {
         try (FileWriter fileWriter = new FileWriter("src/test/resources/FileWriterTest.txt")) {
             fileWriter.write("Hello Folks!".toCharArray());
         }
-        Assert.assertEquals("Hello Folks!", new String(Files.readAllBytes(Path.of("src/test/resources/FileWriterTest.txt"))));
+        Assert.assertEquals("Hello Folks!", new String(Files.readAllBytes(Paths.get("src/test/resources/FileWriterTest.txt"))));
     }
 }
